# bip39

./: .clang-format  .editorconfig  .gitignore  LICENSE  Makefile  README.md  bip39.1  bip39.1.ronn  bip39.c  english.h  index.txt  meson.build  mkwordlists.pl  wordlist.cs.h  wordlist.en.h  wordlist.es.h  wordlist.fr.h  wordlist.it.h  wordlist.ja.h  wordlist.ko.h  wordlist.pt.h  wordlist.zh_cn.h  wordlist.zh_tw.h
src/: bip39.c  bip39.h  bits.c  bits.h  main.c  opts.c  opts.h  print.c  print.h  wordlist.c  wordlist.h  wordlists.c
tests/: bip39.h  bits.h  main.c  opts.h  wordlist.h
